force-app/main/default/objects/Account/fields/ADA_Account_Health_Score__c.field-meta.xml
<CustomField>
            <fullName>ADA_Account_Health_Score__c</fullName>
            <label>Account Health Score</label>
            <description>Tracks the overall health of the account on a scale from 0 to 100, with higher scores indicating healthier accounts</description>
            <type>Number</type>
            <precision>5</precision>
            <scale>2</scale>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
            
        </CustomField>