force-app/main/default/objects/Account/fields/ADA_Account_Tier__c.field-meta.xml
<CustomField>
            <fullName>ADA_Account_Tier__c</fullName>
            <label>Account Tier</label>
            <description>Classification tier for the account based on strategic importance and revenue potential</description>
            <type>Picklist</type>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
            
            <valueSet>
                <restricted>true</restricted>
                <valueSetDefinition>
                    
                    <value>
                        <fullName>Platinum</fullName>
                    </value>
                    
                    <value>
                        <fullName>Gold</fullName>
                    </value>
                    
                    <value>
                        <fullName>Silver</fullName>
                    </value>
                    
                    <value>
                        <fullName>Bronze</fullName>
                    </value>
                    
                </valueSetDefinition>
            </valueSet>
        </CustomField>