force-app/main/default/objects/Account/fields/ADA_IsActive__c.field-meta.xml
<CustomField>
            <fullName>ADA_IsActive__c</fullName>
            <label>Is Active</label>
            <description>Indicates whether this account is currently active and engaged with the organization</description>
            <type>Checkbox</type>
            <defaultValue>false</defaultValue>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>