force-app/main/default/objects/Account/fields/ADA_Last_Activity_Date__c.field-meta.xml
<CustomField>
            <fullName>ADA_Last_Activity_Date__c</fullName>
            <label>Last Activity Date</label>
            <description>The date of the most recent activity or interaction with this account</description>
            <type>Date</type>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>