force-app/main/default/objects/Account/fields/ADA_Total_Revenue__c.field-meta.xml
<CustomField>
            <fullName>ADA_Total_Revenue__c</fullName>
            <label>Total Revenue</label>
            <description>Total revenue associated with this account across all opportunities and transactions</description>
            <type>Currency</type>
            <precision>18</precision>
            <scale>2</scale>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
            
            <defaultValue></defaultValue>
        </CustomField>