force-app/main/default/objects/Account/fields/ECP_Account_Manager__c.field-meta.xml
<CustomField>
            <fullName>ECP_Account_Manager__c</fullName>
            <label>Account Manager</label>
            <description>User assigned as the primary account manager responsible for this account</description>
            <type>Lookup</type>
            <referenceTo>User</referenceTo>
            <relationshipLabel>Managed Accounts</relationshipLabel>
            <relationshipName>ECP_ManagedAccounts</relationshipName>
            <deleteConstraint>SetNull</deleteConstraint>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>