force-app/main/default/objects/Account/fields/ECP_Account_Tier__c.field-meta.xml
<CustomField>
            <fullName>ECP_Account_Tier__c</fullName>
            <label>Account Tier</label>
            <description>Customer tier classification indicating the strategic importance and value of the account</description>
            <type>Picklist</type>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
            
            <valueSet>
                <restricted>true</restricted>
                <valueSetDefinition>
                    
                    <value>
                        <fullName>Bronze</fullName>
                    </value>
                    
                    <value>
                        <fullName>Silver</fullName>
                    </value>
                    
                    <value>
                        <fullName>Gold</fullName>
                    </value>
                    
                    <value>
                        <fullName>Platinum</fullName>
                    </value>
                    
                </valueSetDefinition>
            </valueSet>
        </CustomField>