force-app/main/default/objects/Account/fields/ECP_Annual_Contract_Value__c.field-meta.xml
<CustomField>
            <fullName>ECP_Annual_Contract_Value__c</fullName>
            <label>Annual Contract Value</label>
            <description>Total annual contract value for this account across all active contracts</description>
            <type>Currency</type>
            <precision>18</precision>
            <scale>2</scale>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
            
            <defaultValue></defaultValue>
        </CustomField>