force-app/main/default/objects/Account/fields/ECP_Last_Engagement_Date__c.field-meta.xml
<CustomField>
            <fullName>ECP_Last_Engagement_Date__c</fullName>
            <label>Last Engagement Date</label>
            <description>Date of the most recent customer interaction or engagement activity</description>
            <type>Date</type>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>