force-app/main/default/objects/Account/fields/ECP_Primary_Industry__c.field-meta.xml
<CustomField>
            <fullName>ECP_Primary_Industry__c</fullName>
            <label>Primary Industry</label>
            <description>Primary industry vertical or sector for this account</description>
            <type>Picklist</type>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
            
            <valueSet>
                <restricted>true</restricted>
                <valueSetDefinition>
                    
                    <value>
                        <fullName>Technology</fullName>
                    </value>
                    
                    <value>
                        <fullName>Healthcare</fullName>
                    </value>
                    
                    <value>
                        <fullName>Finance</fullName>
                    </value>
                    
                    <value>
                        <fullName>Manufacturing</fullName>
                    </value>
                    
                    <value>
                        <fullName>Retail</fullName>
                    </value>
                    
                    <value>
                        <fullName>Other</fullName>
                    </value>
                    
                </valueSetDefinition>
            </valueSet>
        </CustomField>