force-app/main/default/objects/Account/listViews/ADA_All_Active_Accounts.listView-meta.xml
<ListView>
            <fullName>ADA_All_Active_Accounts</fullName>
            <label>All Active Accounts</label>
            <filterScope>Everything</filterScope>
            
            <columns>ACCOUNT.NAME</columns>
            
            <columns>ADA_Account_Tier__c</columns>
            
            <columns>ADA_Account_Health_Score__c</columns>
            
            <columns>ADA_Total_Revenue__c</columns>
            
            <columns>ACCOUNT.INDUSTRY</columns>
            
            <columns>ADA_Last_Activity_Date__c</columns>

        </ListView>